--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -19,4 +19,15 @@
     }
     /* navbar end*/
 
+    /* .banner-container start */
+    .banner-container{
+        flex-direction: column;
+    }
+    .banner-tittle {
+        font-size:3.7rem;
+        font-weight: 800;
+    }
+
+    /* .ban  ner-container end */
+
 }
