--- a/styles/style.css
+++ b/styles/style.css
@@ -1,51 +1,114 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     font-family: "Inter", sans-serif;
     background: rgb(0, 0, 0);
     color: white;
 }
 
+.header-container {
+    border: 2px solid;
+}
+
+/* shared styles */
+.btn {
+    width: 224px;
+    height: 54px;
+    border-radius: 42px;
+    background: rgb(230, 83, 60);
+    border: none;
+    color: white;
+    font-size: 18px;
+    font-weight: 400;
+}
+
 /* navbar start here */
-.navbar{
+.navbar {
     max-width: 1060px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 57px;
+    margin-top: 58px;
+    margin-bottom: 32px;
 }
-.nav-title{
+
+.nav-title {
     color: rgb(230, 83, 60);
     font-size: 1.7rem;
     font-weight: 800;
     font-style: italic;
 }
-.nav-items{
+
+.nav-items {
     display: flex;
     justify-content: space-evenly;
     gap: 60px;
     margin-right: 20px;
-    border: 1px solid rgba(255,255,255,0.1);
+    border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 40px;
     padding: 10px;
-    font-size: 0.8rem; 
+    font-size: 0.8rem;
 }
-#home{
+
+#home {
     background: rgb(230, 83, 60);
     width: 60px;
     border-radius: 40px;
     padding: 2px;
     text-align: center;
 }
-.hamburger{
+
+.hamburger {
     display: none;
     font-size: 20px;
 }
+
 /* navbar ends here */
+
+/* banner-container start */
+.banner-container {
+    max-width: 1060px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.banner-content {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-top: 97px;
+}
+
+.banner-tittle {
+    font-size:4.7rem;
+    font-weight: 900;
+}
+
+.font {
+    font-style: italic;
+    font-weight: 400;
+}
+
+.banner-description {
+    opacity: 0.5;
+}
+.btn-normal{
+    width: 224px;
+    height: 54px;
+    border-radius: 42px;
+    border: 2px solid;
+    color: white;
+    font-size: 18px;
+    font-weight: 400;
+    background-color: black;
+}
+
+/* banner-container end */
