--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,31 +1,45 @@
+@media screen and (min-width:576px) and (max-width:992px) {}
 
-
-@media screen and (min-width:576px) and (max-width:992px) {
-    
-}
-
-         /* mobile screen */
+/* mobile screen */
 
 @media screen and (max-width:576px) {
+
     /* navbar */
-    .nav-items{
+    .nav-items {
         display: none;
     }
-    .hamburger{
+
+    .hamburger {
         display: block;
     }
-    .navbar{
+
+    .navbar {
         width: 400px;
+        margin-left:30px;
     }
+
     /* navbar end*/
 
     /* .banner-container start */
-    .banner-container{
+    .banner-container {
         flex-direction: column;
     }
+
     .banner-tittle {
-        font-size:3.7rem;
+        font-size: 3.7rem;
         font-weight: 800;
+    }
+
+    .banner-card {
+        width: 170px;
+        height: 80px;
+        top: 40%;
+        left: 5%;
+    }
+    .banner-card-2{
+        width: 170px;
+        height: 80px;
+        left: 40%;
     }
 
     /* .ban  ner-container end */
