--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,8 @@ body {
 }
 
 .header-container {
-    border: 2px solid;
+    border: 0.1px solid black;
+    background: linear-gradient(90deg, rgb(17, 17, 17), rgba(119, 119, 119, 0.2) 100%);
 }
 
 /* shared styles */
@@ -55,6 +56,7 @@ body {
     border-radius: 40px;
     padding: 10px;
     font-size: 0.8rem;
+    cursor: pointer;
 }
 
 #home {
@@ -88,8 +90,9 @@ body {
 }
 
 .banner-tittle {
-    font-size:4.7rem;
+    font-size: 4.7rem;
     font-weight: 900;
+    padding: 15px;
 }
 
 .font {
@@ -99,8 +102,13 @@ body {
 
 .banner-description {
     opacity: 0.5;
+    padding: 15px;
 }
-.btn-normal{
+.banner-btn{
+    padding: 15px;
+}
+
+.btn-normal {
     width: 224px;
     height: 54px;
     border-radius: 42px;
@@ -109,6 +117,76 @@ body {
     font-size: 18px;
     font-weight: 400;
     background-color: black;
+    margin-left: 14px;
+    
+}
+
+.banner-img {
+    position: relative;
+}
+
+.banner-card {
+    width: 206px;
+    height: 96px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    color: white;
+    background: rgba(247, 243, 243, 0.185);
+    border-radius: 12px;
+    position: absolute;
+    top: 70%;
+    right: 70%;
+}
+
+.card-title {
+    font-size: 1.2rem;
+    font-weight: 900;
+}
+
+.card-description {
+    font-size: 0.9rem;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.6px;
+    opacity: 0.7;
+}
+
+.banner-card-2 {
+    width: 206px;
+    height: 96px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    color: white;
+    background: rgba(247, 243, 243, 0.185);
+    border-radius: 12px;
+    position: absolute;
+    top: 20%;
+    left: 65%;
+}
+
+.card-title-2 {
+    font-size: 2rem;
+    font-weight: 900;
+}
+
+.card-description-2 {
+    font-size: 0.9rem;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.6px;
+    opacity: 0.7;
+}
+
+.circle {
+    height: 40px;
+    width: 40px;
+    background: rgb(230, 83, 60);
+    border: none;
+    border-radius: 50%;
 }
 
 /* banner-container end */
