--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,12 @@ body {
     background: linear-gradient(90deg, rgb(17, 17, 17), rgba(119, 119, 119, 0.2) 100%);
 }
 
+.main-container {
+    max-width: 1044px;
+    margin: 0 auto;
+    border: 2px solid green;
+}
+
 /* shared styles */
 .btn {
     width: 224px;
@@ -104,7 +110,8 @@ body {
     opacity: 0.5;
     padding: 5px;
 }
-.banner-btn{
+
+.banner-btn {
     padding: 5px;
 }
 
@@ -118,7 +125,7 @@ body {
     font-weight: 400;
     background-color: black;
     margin-left: 14px;
-    
+
 }
 
 .banner-img {
@@ -190,3 +197,57 @@ body {
 }
 
 /* banner-container end */
+
+/* habit-container start */
+.habit-container {
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.habit-content {
+    text-align: center;
+}
+
+.habit-title {
+    font-size: 2.8rem;
+    font-weight: 900;
+    margin-bottom: 10px;
+}
+
+.habit-description {
+    font-size: 0.8rem;
+    opacity: 0.5;
+    margin-bottom: 58px;
+}
+.habit-card-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+}
+.habit-card-1,
+.habit-card-2,
+.habit-card-4,
+.habit-card-3 {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+.habit-card-img {
+    width:80%;
+}
+.habit-card-img img {
+    width: 100%;
+    border-radius: 100%;
+}
+.habit-card-title{
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+.habit-card-description{
+    font-size: 0.7rem;
+    font-weight: 400;
+    opacity: 0.5;
+}
+/* habit-container end */
