--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -105,4 +105,32 @@
     }
     /* .training-container end */
 
+    /* bmi section start */
+    .bmi-container{
+        margin: 100px 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left: 20px;
+    }
+    .bmi-section{
+        border: 1px solid rgba(255, 255, 255, 0.067);
+        background-color: rgba(255, 255, 255, 0.067);
+        border-radius: 2px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .chart{
+        width: 100%;
+        margin-left: 160px;
+        margin-bottom: 100px;
+    }
+    .calculator{
+        width: 80%;
+        margin-left: 160px;
+    }
+    /* bmi section end */
 }
