--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -214,4 +214,13 @@
         left: 10%;
     }
     /* meet-container end */
+
+    /* footer */
+    .footer-section{
+        margin-top: 60px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 3%;
+        margin-left: 30px;
+    }
 }
